--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/beef-casserole.html">Grandma's Ground Beef Casserole</a>
     </body>
 </html>
