--- a/recipes/beef-casserole.html
+++ b/recipes/beef-casserole.html
@@ -8,5 +8,35 @@
 
     <body>
         <h1>Grandma's Ground Beef Casserole</h1>
+        <img src="https://www.allrecipes.com/thmb/9L4DFCyGnsDV-gWH3PgnPebsHmI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/231808_GrandmasGroundBeefCasserole_MFS-WD-3x2-1-70dbed45c9de463a85c4b4f3daf15cee.jpg" alt="Delicious Ground Beef Casserole">
+
+        <h2>Description</h2>
+        <p>Nobody makes casserole like your Grandma. That's why this old-fashioned ground beef casserole with egg noodles is always such a hit! It's made with ingredients you already have on hand (and, of course, a little bit of love).</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound ground beef</li>
+            <li>2 (15 ounce) cans tomato sauce</li>
+            <li>1 teaspoon white sugar</li>
+            <li>1 teaspoon garlic salt</li>
+            <li>1 teaspoon salt</li>
+            <li>1 (8 ounces) package egg noodles</li>
+            <li>1 cup sour cream</li>
+            <li>3 ounces cream cheese, softened</li>
+            <li>1 large white onion, diced</li>
+            <li>1/2 cup shredded sharp cheddar cheese, or more to taste</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Heat a large skillet over medium-high heat. Cook and stir ground beef in the hot skillet until browned and crumbly, 5 to 7 minutes; drain and discard grease.</li>
+            <li>Mix tomato sauce, sugar, garlic salt, and salt into the ground beef; simmer until flavors blend, about 20 minutes. Remove from the heat, cover the skillet, and cool to room temperature.</li>
+            <li>While the sauce is cooking, bring a large pot of lightly salted water to a boil. Cook egg noodles in the boiling water, stirring occasionally until cooked through but firm to the bite, 7 to 9 minutes. Drain.</li>
+            <li>While the egg noodles are cooking, preheat oven to 350 degrees F (175 degrees C). Grease a 9x13-inch casserole dish.</li>
+            <li>Mix sour cream, cream cheese, and onion together in a bowl.</li>
+            <li>Layer 1/2 of the egg noodles into the prepared casserole dish. Top with 1/2 of the sour cream mixture, then 1/2 of the ground beef mixture. Repeat layers once more. Sprinkle Cheddar cheese over top.</li>
+            <li>Bake in the preheated oven until cheese is melted and golden brown, 25 to 30 minutes.</li>
+        </ol>
+
     </body>
 </html>
