--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/beef-casserole.html">Grandma's Ground Beef Casserole</a>
+        <ul>
+            <li><a href="./recipes/beef-casserole.html">Grandma's Ground Beef Casserole</a></li>
+            <li><a href="./recipes/mac-cheese.html">Homemade Mac and Cheese</a></li>
+            <li><a href="./recipes/lasagna-casserole.html">Lasagna Casserole</a></li>
+        </ul> 
     </body>
 </html>
