Feat: add style
created style.css, linked it on the pages and created some classes in
order to stylize it.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 id="site-title" class="title">Odin Recipes</h1>
 
-        <ul>
+        <ul class="recipe-list">
             <li><a href="./recipes/beef-casserole.html">Grandma's Ground Beef Casserole</a></li>
             <li><a href="./recipes/mac-cheese.html">Homemade Mac and Cheese</a></li>
             <li><a href="./recipes/lasagna-casserole.html">Lasagna Casserole</a></li>
