--- a/recipes/beef-casserole.html
+++ b/recipes/beef-casserole.html
@@ -4,11 +4,12 @@
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Grandma's Ground Beef Casserole</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
-        <h1>Grandma's Ground Beef Casserole</h1>
-        <img src="https://www.allrecipes.com/thmb/9L4DFCyGnsDV-gWH3PgnPebsHmI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/231808_GrandmasGroundBeefCasserole_MFS-WD-3x2-1-70dbed45c9de463a85c4b4f3daf15cee.jpg" alt="Delicious Ground Beef Casserole">
+        <h1 class="title">Grandma's Ground Beef Casserole</h1>
+        <img class="recipe-img" src="https://www.allrecipes.com/thmb/9L4DFCyGnsDV-gWH3PgnPebsHmI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/231808_GrandmasGroundBeefCasserole_MFS-WD-3x2-1-70dbed45c9de463a85c4b4f3daf15cee.jpg" alt="Delicious Ground Beef Casserole">
 
         <h2>Description</h2>
         <p>Nobody makes casserole like your Grandma. That's why this old-fashioned ground beef casserole with egg noodles is always such a hit! It's made with ingredients you already have on hand (and, of course, a little bit of love).</p>
