--- a/recipes/lasagna-casserole.html
+++ b/recipes/lasagna-casserole.html
@@ -4,11 +4,12 @@
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lasagna Casserole</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
-        <h1>Lasagna Casserole</h1>
-        <img src="https://www.allrecipes.com/thmb/rzWwhOptGC_WNPsR8yzb-0uyh2I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/lasagna-casserole-ddmfs-4x3-0344-882db4cb79b14539bacbc31238a439d7.jpg" alt="Delicious Lasagna Casserole">
+        <h1 class="title">Lasagna Casserole</h1>
+        <img class="recipe-img" src="https://www.allrecipes.com/thmb/rzWwhOptGC_WNPsR8yzb-0uyh2I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/lasagna-casserole-ddmfs-4x3-0344-882db4cb79b14539bacbc31238a439d7.jpg" alt="Delicious Lasagna Casserole">
 
         <h2>Description</h2>
         <p>his casserole is the perfect winter dinner! It's gone in seconds in my house. Make sure to use whole-milk ricotta and use more red pepper if you like it hotter.</p>
