--- a/recipes/mac-cheese.html
+++ b/recipes/mac-cheese.html
@@ -4,14 +4,15 @@
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Homemade Mac and Cheese</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
-        <h1>Homemade Mac and Cheese</h1>
-        <img src="https://www.allrecipes.com/thmb/YrWDMIAOSx0o7xgfpLLNns8I9lk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Homemade-Mac-and-Cheese-ffae3fa24a534094bdbccb7038ba4e81.jpg" alt="Delicious Mac and Cheese">
+        <h1 class="title">Homemade Mac and Cheese</h1>
+        <img class="recipe-img" src="https://www.allrecipes.com/thmb/YrWDMIAOSx0o7xgfpLLNns8I9lk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Homemade-Mac-and-Cheese-ffae3fa24a534094bdbccb7038ba4e81.jpg" alt="Delicious Mac and Cheese">
 
         <h2>Description</h2>
-        <p>This classic baked mac and cheese recipe with a buttered bread crumb topping is creamy and comforting. It's easy to make the cheese sauce from scratch on your stovetop, starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a rich, decadent sauce that coats every nook and cranny of the noodles. Serve this comfort-food macaroni and cheese casserole with grilled meats, sloppy Joes, fried chicken or alongside a salad for a meatless dinner.
+        <p>This classic baked mac and cheese recipe with a buttered bread crumb topping is creamy and comforting. It's easy to make the cheese sauce from scratch on your stovetop, starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a rich, decadent sauce that coats every nook and cranny of the noosdles. Serve this comfort-food macaroni and cheese casserole with grilled meats, sloppy Joes, fried chicken or alongside a salad for a meatless dinner.
         </p>
 
         <h2>Ingredients</h2>
